Fixed image sizing and price alignment.

--- a/cart-page/cart.css
+++ b/cart-page/cart.css
@@ -73,8 +73,8 @@ body {
 }
 
 .product-image {
-  width: 50%;
-  margin-right: 20px;
+  width: min(50%, 250px);
+  height: 200px;
 }
 
 .product-image img {
